--- a/src/app/components/book-list/book-list.component.html
+++ b/src/app/components/book-list/book-list.component.html
@@ -1,7 +1,9 @@
 <h2>Book list</h2>
 
 <ul>
-    <li *ngFor="let book of books">
-        {{ book.title }} by {{ book.author }} ({{ book.publicationDate }})
+  @for (book of books; track book) {
+    <li>
+      {{ book.title }} by {{ book.author }} ({{ book.publicationDate }})
     </li>
+  }
 </ul>
